New Time Table add

--- a/Bus_Ticketing/Template/index.html
+++ b/Bus_Ticketing/Template/index.html
@@ -133,8 +133,7 @@
     
     <nav>
         <a href="{% url 'search_routes' %}" class="nav-item">Search Routes</a>
-        <a href="{% url 'live_tracking' %}" class="nav-item">Live Tracking</a>
-        <a href="{% url 'timetables' %}" class="nav-item">Timetables</a>
+        <a href="{% url 'bus_timetable' %}" class="nav-item">Timetables</a>
         <a href="{% url 'user_account' %}" class="nav-item">Account</a>
         <a href="{% url 'logout' %}" class="nav-item">Logout</a>
     </nav>
