--- a/Bus_Ticketing/Template/ticket_booking.html
+++ b/Bus_Ticketing/Template/ticket_booking.html
@@ -207,7 +207,7 @@
         </div>
         <div class="icon">
             <i>🚌</i>
-            <span><a href="#">Tracking</a></span>
+            <span><a href="{% url 'bus_timetable' %}">TimeTable</a></span>
         </div>
         <div class="icon">
             <i>🔍</i>
