--- a/Bus_Ticketing/Template/login.html
+++ b/Bus_Ticketing/Template/login.html
@@ -136,11 +136,11 @@
             }
         }
     </style>
-</head>
+</head> 
 <body>
     <header>
         <div class="logo">
-            <img src="{% static 'images/bus_logo.webp' %}" alt="BusScout Logo">
+            <img src="{% static 'Bus_Ticketing/static/images/logo.jpg' %}" alt="BusScout Logo">
         </div>
         <h1>Login to BusScout</h1>
     </header>
