--- a/Bus_Ticketing/Template/user_account.html
+++ b/Bus_Ticketing/Template/user_account.html
@@ -219,7 +219,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="icon"><i>🏠</i><span><a href="{% url 'home' %}">Home</a></span></div>
-        <div class="icon"><i>🚌</i><span><a href="{% url 'live_tracking' %}">Tracking</a></span></div>
+        <div class="icon"><i>🚌</i><span><a href="{% url 'bus_timetable' %}">Timetable</a></span></div>
         <div class="icon"><i>🔍</i><span><a href="{% url 'search_routes' %}">Search</a></span></div>
         <div class="icon"><i>🎫</i><span><a href="{% url 'book_ticket' route_id=1 %}">Tickets</a></span></div>
         <div class="icon"><i>👤</i><span><a href="{% url 'user_account' %}">Profile</a></span></div>
